Actualizando las dependencias del portal

--- a/IncidenceAppMS/angular.json
+++ b/IncidenceAppMS/angular.json
@@ -23,6 +23,9 @@
             "customWebpackConfig": {
               "path": "./webpack/webpack.custom.js"
             },
+            "allowedCommonJsDependencies": [
+              "dayjs"
+            ],
             "outputPath": "target/classes/static/",
             "index": "src/main/webapp/index.html",
             "main": "src/main/webapp/main.ts",
