--- a/IncidenceAppMS/package.json
+++ b/IncidenceAppMS/package.json
@@ -75,6 +75,7 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/cdk": "^13.3.8",
     "@angular/common": "13.1.3",
     "@angular/compiler": "13.1.3",
     "@angular/core": "13.1.3",
@@ -93,6 +94,9 @@
     "dayjs": "1.10.7",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "9.0.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.4.1",
     "rxjs": "7.5.2",
     "swagger-ui-dist": "4.2.1",
     "tslib": "2.3.1",
