--- a/IncidenceAppMS/src/main/resources/config/application-prod.yml
+++ b/IncidenceAppMS/src/main/resources/config/application-prod.yml
@@ -52,9 +52,9 @@ spring:
       # it can be set to any label, branch or commit of the configuration source Git repository
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/IncidenceAppMS
-    username: IncidenceAppMS
-    password:
+    url: jdbc:postgresql://localhost:5432/incidencedb
+    username: postgres
+    password: amm1992
     hikari:
       poolName: Hikari
       auto-commit: false
