--- a/IncidenceAppMS/src/main/resources/config/application.yml
+++ b/IncidenceAppMS/src/main/resources/config/application.yml
@@ -70,7 +70,7 @@ management:
           ]
   endpoint:
     health:
-      show-details: when_authorized
+      show-details: WHEN_AUTHORIZED
       roles: 'ROLE_ADMIN'
       probes:
         enabled: true
