--- a/IncidenceAppMS/package.json
+++ b/IncidenceAppMS/package.json
@@ -75,6 +75,7 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/animations": "^13.1.3",
     "@angular/cdk": "^13.3.8",
     "@angular/common": "13.1.3",
     "@angular/compiler": "13.1.3",
@@ -91,6 +92,7 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "bootstrap": "4.6.1",
+    "chart.js": "^3.7.1",
     "dayjs": "1.10.7",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "9.0.0",
