--- a/IncidenceAppMS/src/main/resources/config/application.yml
+++ b/IncidenceAppMS/src/main/resources/config/application.yml
@@ -148,7 +148,7 @@ spring:
       hibernate.query.fail_on_pagination_over_collection_fetch: true
       hibernate.query.in_clause_parameter_padding: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
@@ -159,7 +159,7 @@ spring:
     allow-circular-references: true
   mvc:
     pathmatch:
-      matching-strategy: ant_path_matcher
+      matching-strategy: ANT_PATH_MATCHER
   task:
     execution:
       thread-name-prefix: incidence-app-ms-task-
