--- a/IncidenceAppMS/package.json
+++ b/IncidenceAppMS/package.json
@@ -86,6 +86,7 @@
     "@angular/platform-browser-dynamic": "13.1.3",
     "@angular/router": "13.1.3",
     "@fortawesome/angular-fontawesome": "0.10.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
