Se crea la estructura para las modales de angular

--- a/IncidenceAppMS/.eslintrc.json
+++ b/IncidenceAppMS/.eslintrc.json
@@ -87,7 +87,7 @@
     "guard-for-in": "error",
     "no-bitwise": "error",
     "no-caller": "error",
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": "off",
     "no-eval": "error",
     "no-labels": "error",
     "no-new": "error",
@@ -97,3 +97,4 @@
     "spaced-comment": ["warn", "always"]
   }
 }
+//no-console": ["error", { "allow": ["warn", "error"] }],
