--- a/IncidenceAppMS/package.json
+++ b/IncidenceAppMS/package.json
@@ -81,6 +81,7 @@
     "@angular/compiler": "13.1.3",
     "@angular/core": "13.1.3",
     "@angular/forms": "13.1.3",
+    "@angular/google-maps": "^13.3.9",
     "@angular/localize": "13.1.3",
     "@angular/platform-browser": "13.1.3",
     "@angular/platform-browser-dynamic": "13.1.3",
@@ -89,6 +90,8 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@googlemaps/google-maps-services-js": "^3.3.15",
+    "@googlemaps/js-api-loader": "^1.14.3",
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
@@ -113,6 +116,7 @@
     "@angular/cli": "13.1.2",
     "@angular/compiler-cli": "13.1.3",
     "@angular/service-worker": "13.1.3",
+    "@types/google.maps": "^3.49.2",
     "@types/jest": "27.4.0",
     "@types/node": "16.11.21",
     "@typescript-eslint/eslint-plugin": "5.10.0",
